--- a/index.html
+++ b/index.html
@@ -4,13 +4,45 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"/>
-  <link rel="stylesheet" href="./assets/css/styles.css"/>
-  <title>JS Quiz</title>
+  <link rel="stylesheet" type="text/css" href="./assets/css/styles.css"/>
+  <title>JavaSript Quiz</title>
 </head>
 <body>
-  <script src="./assets/js/questions.js"></script>
-  <script src="./assets/js/script.js"></script>
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" id="highscore-link" href="viewScores.html">Scores</a>
+          </div>
+        <div class="nav navbar-nav navbar-right" id="time">T-minus: 0</div>
+    </div>
+  </nav>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-3">
+      <div class="col-lg-6">
+          <h1>JavaScript Quiz Challenge</h1>
+            <p>Try to answer the folowing Javascript related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by five seconds! Have fun!</p>
+            <div id="buttonDiv"><button type="button" class="btn btn-dark" id="startButton">Start Quiz</button>   
+      <div class="col-lg-3"></div>  
+    <div class="row">
+      <div class="col-md-12 col-lg-10" id="master-div">
+            <h2 id="question"></h2>
+            <div id="answers">
+              <button type="button" class="btn btn-dark" id="answerOne"></button>
+              <button type="button" class="btn btn-dark" id="answerTwo"></button>
+              <button type="button" class="btn btn-dark" id="answerThree"></button>
+              <button type="button" class="btn btn-dark" id="answerFour"></button>
+            </div> 
+          </div>
+        </div> 
+      </div>
+    </div>
+  </div>
+  
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  </body>
+  <script src="./assets/js/questions.js"></script>
+  <script src="./assets/js/script.js"></script>
+ </body>
 </html>
